tests/neg/i13703.check
-- [E007] Type Mismatch Error: tests/neg/i13703.scala:3:52 -------------------------------------------------------------
3 |val f2: Foo { val i: Int; def i_=(x: Int): Unit } = new Foo { var i: Int = 0 } // error
  |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                                                    Found:    Object with Foo {...}
  |                                                    Required: Foo{val i: Int; def i_=(x: Int): Unit}
  |
  | longer explanation available when compiling with `-explain`
